[project]
name = "centcom-langgraph"
version = "0.3.0"
description = "Contro1 connector for LangGraph human approvals and human input"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Contro1", email = "dev@contro1.com" }]
keywords = ["centcom", "langgraph", "human-in-the-loop", "hitl", "approval"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "centcom>=1.2.0",
    "langgraph>=0.2.0",
]

[project.optional-dependencies]
webhook = ["fastapi>=0.100.0"]

[project.urls]
Homepage = "https://contro1.com"
Documentation = "https://contro1.com/docs"
Repository = "https://github.com/contro1-hq/centcom-langgraph"

[build-system]
requires = ["hatchling<1.27"]
build-backend = "hatchling.build"
